--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,8 +23,11 @@ WORKDIR /root/
 # Copy the binary from builder
 COPY --from=builder /app/main .
 
+# Set default PORT
+ENV PORT=8080
+
 # Expose port
-EXPOSE 8080
+EXPOSE $PORT
 
 # Run the application
 CMD ["./main"]
