--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:8080/api
+REACT_APP_API_URL=https://cryptowallet-rsf1.onrender.com/api
 REACT_APP_GOOGLE_CLIENT_ID=862938713766-otpi1uedi44bfm6sh1vht7fm0l66lt7o.apps.googleusercontent.com
