--- a/render.yaml
+++ b/render.yaml
@@ -2,18 +2,25 @@ services:
   - type: web
     name: crypto-wallet-backend
     env: go
-    buildCommand: cd backend && go build -o main .
-    startCommand: cd backend && ./main
+    region: oregon
+    plan: free
+    rootDir: backend
+    buildCommand: go build -o app
+    startCommand: ./app
     envVars:
       - key: PORT
-        value: 10000
+        value: 8080
       - key: GIN_MODE
         value: release
       - key: ENVIRONMENT
         value: production
+      - key: MONGO_URI
+        sync: false
       - key: MONGODB_URI
         sync: false
       - key: JWT_SECRET
+        sync: false
+      - key: FRONTEND_URL
         sync: false
       - key: EMAIL_SERVICE_API_KEY
         sync: false
